# game2midi

./: TODO  configure.in
basic-midi-io-example/: configure.ac  configure.in
basic-midi-io-example/src/: Makefile.am  Makefile.linux  Makefile.mingw  Makefile.osx  g2ghpro.cpp  midiio.cpp  midiout.cpp
mappings/hydrogen/: ddr-tr808  ddr-yamaha_vintiage  ps2gamepad-colombo  ps2gamepad-gmkit  ps3drums-tr909  ps3drums-ultraacoustic
src/: Makefile  Makefile.am  Makefile.in  Makefile.mingw  Makefile.osx  g2ghpro.cpp  game2midi.cpp  game2midi.h  joy2seq.cpp  joy2seq.h  test-config
wiiuseplus/: CHANGELOG
wiiuseplus/example/: Makefile  core  example.c  example.c.orig  example1.c.old  example1.cpp  example2.c  exampleuinput.cpp  read_config.cpp  wii2drum.cfg
wiiuseplus/example/rtmidi-1.0.7/: config.status  configure
wiiuseplus/example/rtmidi-1.0.7/autom4te.cache/: output.0  requests  traces.0
wiiuseplus/example/rtmidi-1.0.7/tests/: Makefile  cmidiin  cmidiin.cpp  midiout  midiout.cpp  midiprobe  qmidiin  qmidiin.cpp  sysextest  sysextest.cpp
wiiuseplus/src/: Makefile  events.c  io_nix.c.bad  ir.c  motion_plus.c  motion_plus.h  wiiboard.c  wiiboard.h  wiiuse.c  wiiuse.h  wiiuse_internal.h
